Refactor index.html structure and styles
Updated the HTML structure and styling for the index page, including language changes and improved navigation links.

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ header nav a:hover {
             <a class="logo" href="index.html">Emperor penguin</a>
             <nav>
                 <ul>
-                    <li><a href="Growth.html">Growth/ Size</a></li> 
-                    <li><a href="life.html">Life / Breeding</a></li>
+                    <li><a href="Growth.html">Growth / Size</a></li> 
+                    <li><a href="life.html">Features / Surviva</a></li>
                     <li><a href="lifestyle.html">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html">Journey / Dive</a></li> 
                     <li><a href="highlights.html"> Cute Moments</a></li>
@@ -156,3 +156,4 @@ header nav a:hover {
 
 </body>
 </html>
+
