--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ header nav a:hover {
             <nav>
                 <ul>
                     <li><a href="Growth.html">Growth / Size</a></li> 
-                    <li><a href="life.html">Features / Surviva</a></li>
+                    <li><a href="life.html">Features / Survival</a></li>
                     <li><a href="lifestyle.html">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html">Journey / Dive</a></li> 
                     <li><a href="highlights.html"> Cute Moments</a></li>
@@ -156,4 +156,3 @@ header nav a:hover {
 
 </body>
 </html>
-
