--- a/Growth.html
+++ b/Growth.html
@@ -249,7 +249,7 @@ header nav a:hover {
             <nav>
                 <ul>
                     <li><a href="Growth.html" style="color: #ff6505;">Growth/ Size</a></li> 
-                    <li><a href="life.html">Life / Breeding</a></li>
+                    <li><a href="life.html">Features / Survival</a></li>
                     <li><a href="lifestyle.html">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html">Journey / Dive</a></li>
                     <li><a href="highlights.html">Cute Moments</a></li>
