--- a/journey.html
+++ b/journey.html
@@ -218,8 +218,8 @@ header nav a:hover {
             <a class="logo" href="index.html">Emperor penguin</a>
             <nav>
                 <ul>
-                    <li><a href="Growth.html">Growth/ Size</a></li> 
-                    <li><a href="life.html">Life / Breeding</a></li>
+                    <li><a href="Growth.html">Growth / Size</a></li> 
+                    <li><a href="life.html">Features / Survival</a></li>
                     <li><a href="lifestyle.html">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html" style="color: #ff6505;">Journey / Dive</a></li> 
                     <li><a href="highlights.html"> Cute Moments</a></li>
