--- a/life.html
+++ b/life.html
@@ -215,8 +215,8 @@ header nav a:hover {
             <a class="logo" href="index.html">Emperor penguin</a>
             <nav>
                 <ul>
-                    <li><a href="Growth.html">Growth/ Size</a></li> 
-                    <li><a href="life.html" style="color: #ff6505;">Life / Breeding</a></li>
+                    <li><a href="Growth.html">Growth / Size</a></li> 
+                    <li><a href="life.html" style="color: #ff6505;">Features / Survival</a></li>
                     <li><a href="lifestyle.html">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html">Journey / Dive</a></li> 
                     <li><a href="highlights.html">Cute Moments</a></li>
@@ -229,7 +229,7 @@ header nav a:hover {
         <div class="container" style="display: block; text-align: center;">
             <h1 style="font-size: 32px; margin-bottom: 5px; font-weight: 700;">
                 황제펭귄의 특별한 특성 및 생존 기술 
-                <span style="font-weight: 300; color: #777;">| Features / Highlights</span>
+                <span style="font-weight: 300; color: #777;">| Features / Survival</span>
             </h1>
             <p style="font-size: 16px; color: #555; max-width: 900px; margin: 0 auto; line-height: 1.6;">
                 혹독한 남극 환경에서 생존을 가능하게 하는 황제펭귄만의 놀라운 생물학적, 사회적 특성들을 이미지와 함께 살펴보세요.
@@ -277,7 +277,7 @@ header nav a:hover {
                     <img src="버블젯.png" alt="잠수 시 기포를 방출하는 펭귄">
                 </div>
                 <div class="feature-text">
-                    <h2>3. 마찰력을 이기는 '버블 제트' 잠수</h2>
+                    <h2>3. 마찰력을 이기는 '버블 제트 (Bubble-jet)' 잠수</h2>
                     <p>
                         물속에서 지상으로 고속 상승할 때, 황제펭귄은 깃털에 갇혀있던 공기를 미세한 기포(버블) 형태로 방출합니다.
                     </p>
