--- a/life.html
+++ b/life.html
@@ -277,7 +277,7 @@ header nav a:hover {
                     <img src="버블젯.png" alt="잠수 시 기포를 방출하는 펭귄">
                 </div>
                 <div class="feature-text">
-                    <h2>3. 마찰력을 이기는 버블 제트 (Bubble-jet) 잠수</h2>
+                    <h2>3. 마찰력을 이기는 버블 제트 (Bubble-jet)</h2>
                     <p>
                         물속에서 지상으로 고속 상승할 때, 황제펭귄은 깃털에 갇혀있던 공기를 미세한 기포(버블) 형태로 방출합니다.
                     </p>
