--- a/lifestyle.html
+++ b/lifestyle.html
@@ -228,7 +228,7 @@ header nav a:hover {
             <nav>
                 <ul>
                     <li><a href="Growth.html">Growth/ Size</a></li> 
-                    <li><a href="life.html">Life / Breeding</a></li>
+                    <li><a href="life.html">Features / Survival </a></li>
                     <li><a href="lifestyle.html" style="color: #ff6505;">Habitat / Lifestyle</a></li>
                     <li><a href="journey.html">Journey / Dive</a></li> 
                     <li><a href="highlights.html"> Cute Moments</a></li>
