--- a/highlights.html
+++ b/highlights.html
@@ -218,6 +218,7 @@ header nav a:hover {
     <section class="content">
         <div class="container" style="padding: 10px 0;">
             <div class="text-content">
+                <h5>Emperor penguin</h5>
                 <p style="font-size: 10px; color: #555;">©2025 Yujin Shin. All Rights Reserved.<br>Designed by Yujin Shin / Kaywon University</p>
             </div>
         </div>
